# coursework

./: CMakeLists.txt  inputdialog.cpp  inputdialog.h  inputdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h  personitem.cpp  personitem.h  personlistwidget.cpp  personlistwidget.h  personscene.cpp  personscene.h
include/: abstractfactory.h  family.h  ibasicinfo.h  ifamilynode.h  individual.h  inputdialog.h  iperson.h  ivisualinfo.h  mainwindow.h  person.h  personfactory.h  personitem.h  personlistwidget.h  personrepository.h  personscene.h  relationitem.h
src/: defaultpersonfactory.cpp  inputdialog.cpp  mainwindow.cpp  person.cpp  personfactory.cpp  personitem.cpp  personlistwidget.cpp  personrepository.cpp  personscene.cpp  relationitem.cpp
static/: resources.qrc
ui/: inputdialog.ui  mainwindow.ui
